[gd_scene load_steps=4 format=2]

[ext_resource path="res://CliffFace.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="CliffFace" parent="." instance=ExtResource( 1 )]
position = Vector2( 1200, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="HUD" parent="Camera2D" instance=ExtResource( 2 )]

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 607.855, 100 )

[node name="GameoverTimer" type="Timer" parent="."]
one_shot = true
